[gd_scene load_steps=6 format=3 uid="uid://co2xh2lmxvpq4"]

[ext_resource type="Script" path="res://src/menus/player_select/player_select_menu.gd" id="1_bjdma"]
[ext_resource type="PackedScene" uid="uid://be1joxrc38num" path="res://src/menus/instructions_scene/instructions_scene.tscn" id="2_bw8hu"]
[ext_resource type="PackedScene" uid="uid://d1kkkom2ktphs" path="res://src/menus/player_select/ui/device_selector.tscn" id="2_q5eyk"]
[ext_resource type="PackedScene" uid="uid://cr1i4ulnsdsu2" path="res://src/menus/main_menu/main_menu.tscn" id="3_8s8c0"]
[ext_resource type="FontFile" uid="uid://dcb5yob1d6vl4" path="res://assets/fonts/Super_Mario_Bros_2.ttf" id="4_3kf4d"]

[node name="PlayerSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjdma")
_round_scene = ExtResource("2_bw8hu")
_title_scene = ExtResource("3_8s8c0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Choose players"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TwoPlayerBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "2 Player Mode"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FourPlayerBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "4 Player Mode"

[node name="PlayerSelectors" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Selector0" parent="MarginContainer/VBoxContainer/PlayerSelectors" instance=ExtResource("2_q5eyk")]
layout_mode = 2

[node name="Selector1" parent="MarginContainer/VBoxContainer/PlayerSelectors" instance=ExtResource("2_q5eyk")]
layout_mode = 2

[node name="Selector2" parent="MarginContainer/VBoxContainer/PlayerSelectors" instance=ExtResource("2_q5eyk")]
layout_mode = 2

[node name="Selector3" parent="MarginContainer/VBoxContainer/PlayerSelectors" instance=ExtResource("2_q5eyk")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_3kf4d")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="BackBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_3kf4d")
theme_override_font_sizes/font_size = 24
text = "Back to Title"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/BackBtn" to="." method="_on_back_btn_pressed"]
